--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
         <h1 class="title">THIS IS A VIRUS!</h1>
         <div class="smalltext">Only click the link if you no this is a virus</div>
         <br />
-        <button onclick="buttonClicked()">Click me for the VIRUS!</button>
+        <button onclick="buttonClicked()" href="virus.html">Click me for the VIRUS!</button>
     </body>
 </html>
